# CollegeWork-Calculator-in-C

./: CMakeLists.txt  README.md  TODO.md  main.c
Controller/: IOperacoes.h  Operacoes.c
Controller/interface/: IOperacoes.h
Models/: HistoricoDeContas.c
Models/interface/: IHistoricoDeConta.h
Repository/: AdicaoRepository.c  DivisaoRepository.c  MultiplicacaoRepository.c  SomaRepository.c  SubtracaoRepository.c
Repository/interface/: ICalculadora.h  IOperacoes.h
